src/test/deca/syntax/valid/homebrew/testDecl2.deca
{
	float a=1;
	int b, c=0;
}