src/test/deca/syntax/invalid/homebrew/testDecl1.deca
{
	int a, b=1;
	a=1;
	float c;
}